--- a/src/Raccoon/home.html
+++ b/src/Raccoon/home.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand mt-2 mt-lg-0" href="#">
-            <img src="./img/raccoon.svg" height="50" loading="lazy" /> Raccoon Jobs
+            <img src="./../img/raccoon.svg" height="50" loading="lazy" /> Raccoon Jobs
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
