--- a/src/Raccoon/login.html
+++ b/src/Raccoon/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raccon Jobs</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="./tela1login.js" defer></script>
+    <script src="./scripts/login.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -15,8 +15,8 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand mt-2 mt-lg-0" href="#">
-            <img src="../img/raccoon.svg" height="50" alt="MDB Logo" loading="lazy" /> Raccoon Jobs
+        <a class="navbar-brand mt-2 mt-lg-0" href="/src/Raccoon/home.html">
+            <img src="../img/raccoon.svg" height="50" loading="lazy" /> Raccoon Jobs
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -78,44 +78,10 @@
     </div>
 
     <footer class="text-center text-lg-start bg-light text-muted">
-        <section>
-            <hr>
-            <div class="container text-center text-md-start mt-2">
-                <div class="row mt-3">
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fas fa-gem me-3"></i>Raccoon jobs
-                        </h6>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-                        </p>
-                    </div>
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Links úteis
-                        </h6>
-                        <p>
-                            <a href="#!" class="text-reset">Vagas</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Habilidades</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Cargos</a>
-                        </p>
-                    </div>
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                        <p>
-                            <i class="fas fa-envelope me-3"></i>
-                            Raccon_Jobs@hotmail.com
-                        </p>
-                        <p><i class="fas fa-phone me-3"></i> + 55 (xx) xxxxx xxxx</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <div class="text-center p-4 bg-light">
+        © 2021 Copyright:
+        <a class="fw-bold" href="#">Trash Panda</a>
+        </div>
     </footer>
 </body>
 
