--- a/src/Raccoon/vaga.html
+++ b/src/Raccoon/vaga.html
@@ -10,13 +10,13 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./Raccon/generateDummyData.js"></script>
+    <script src="./scripts/generateDummyData.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand mt-2 mt-lg-0" href="#">
-            <img src="/img/raccoon.svg" height="50" loading="lazy" /> Raccoon Jobs
+        <a class="navbar-brand mt-2 mt-lg-0" href="/src/Raccoon/home.html">
+            <img src="../img/raccoon.svg" height="50" loading="lazy" /> Raccoon Jobs
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
