--- a/src/Raccoon/empresa.html
+++ b/src/Raccoon/empresa.html
@@ -11,6 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./scripts/generateDummyData.js"></script>
+    <script type="module" src="./scripts/utils.js"></script>
+    <script type="module" src="./scripts/empresa.js"></script>
+    
 </head>
 
 <body>
@@ -86,56 +89,6 @@
             const id = urlParams.get('id')
             if(!id){
                 window.location.replace('?id=1');
-            }
-        }
-    </script>
-    <script>
-
-        const urlParams = new URLSearchParams(window.location.search);
-        const id = urlParams.get('id')
-        function habsToPill(habs, max, col){
-            let div = ''
-            for(vl in habs){
-                if(vl < max){
-                    if(vl % 2 == 0){
-                        div += `<p id="skill-${vl}" class="col-sm-${col} rounded-pill bg-warning">${habs[vl].nome} </p>`
-                    }else{
-                        div += `<p id="skill-${vl}" class="col-sm-${col} rounded-pill bg-info">${habs[vl].nome}</p>`
-                    }
-                }
-            }
-            return div
-        }
-        const truncateText = (text, length) => text.length <= length ? text : text.substr(0, length) + '\u2026';
-        const fullDateString = (date) => {let dt = new Date(date); return `${dt.getDate()}/${dt.getMonth()+1}/${dt.getFullYear()}`; }
-        if (id) {
-            const empresa = JSON.parse(localStorage.getItem('Empresas')).find(obj => obj.id === parseInt(id))
-            const vagasDaEmpresa = JSON.parse(localStorage.getItem('Vagas')).filter(obj => empresa.vagas_id.includes(obj.id))
-
-            $('#empresaNome').html(empresa.nome)
-            $('#empresaDataCadastro').html(`No site desde: ${fullDateString(empresa.data_cadastro)}`)
-            $('#empresaLogo').attr("src", empresa.logo_link)
-
-            for (vl in vagasDaEmpresa) {
-                let habilidades = JSON.parse(localStorage.getItem('Habilidades')).filter(obj => vagasDaEmpresa[vl].hab_essencial_id.includes(obj.id))
-                $('#ultimasVagas').append(`
-                    <div class='row col-sm-12 col-md-12 col-lg-6 align-items-center bg-light mt-2'>
-                        <div class="ratio ratio-1x1 col-sm-4">
-                            <img src="${empresa.logo_link}" class="img-fluid rounded align-items-center" alt="LogoDaEmpresa">
-                        </div>
-                        <div class="col-sm-8">
-                            <div class="row ">
-                                <p id="vaga-nome" class="col-sm-12 text-left text-black mt-2"><strong>${vagasDaEmpresa[vl].vaga_nome ? vagasDaEmpresa[vl].vaga_nome : JSON.parse(localStorage.getItem('Cargos')).find(obj => obj.id === vagasDaEmpresa[vl].cargo_id).nome}</strong></p>
-                                <p id="empresa-data" class="col-sm-12 text-left">${empresa.nome} - <small>De: ${fullDateString(vagasDaEmpresa[vl].data_cadastro)} - Até: ${fullDateString(vagasDaEmpresa[vl].data_exp)}</small></p>
-                                <p id="descricao" class="col-sm-12 text-left">${truncateText(vagasDaEmpresa[vl].descricao, 100)}</p>
-                                <div class="col-sm-12 row text-center">
-                                    ${habsToPill(habilidades,3, 4)}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    `
-                )
             }
         }
     </script>
