--- a/src/Raccoon/cadastro.html
+++ b/src/Raccoon/cadastro.html
@@ -11,8 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./scripts/generateDummyData.js"></script>
 
-    
     <style>      
 .form-control:focus {
     border-color: #cccccc;
