--- a/src/template_padrão.html
+++ b/src/template_padrão.html
@@ -11,11 +11,12 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./scripts/generateDummyData.js"></script>
+    <script type="module" src="./scripts/utils.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand mt-2 mt-lg-0" href="/src/Raccoon/home.html">
+        <a class="navbar-brand mt-2 mt-lg-0" href="/Raccoon/home.html">
             <img src="../img/raccoon.svg" height="50" loading="lazy" /> Raccoon Jobs
         </a>
 
@@ -52,5 +53,4 @@
         </div>
     </footer>
 </body>
-
 </html>
