att login e cadastro

--- a/src/Raccoon/cadastro.html
+++ b/src/Raccoon/cadastro.html
@@ -24,6 +24,8 @@
     border-radius: 30px;
     box-shadow: 1px 5px 30px rgb(150, 150, 150);
     border-width: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   
   }
   
