--- a/src/Raccoon/pagina10.html
+++ b/src/Raccoon/pagina10.html
@@ -29,16 +29,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ver vagas</a>
+                    <a class="nav-link" href="./vagas_lista.html">Ver vagas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Habilidades</a>
+                    <a class="nav-link" href="./habilidades.html">Habilidades</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cargos</a>
+                    <a class="nav-link" href="./cargos.html">Cargos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sou empresa</a>
+                    <a class="nav-link" href="./login.html">Sou empresa</a>
                 </li>
             </ul>
         </div>
