--- a/src/Raccoon/empresa.html
+++ b/src/Raccoon/empresa.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./scripts/generateDummyData.js"></script>
     <script type="module" src="./scripts/utils.js"></script>
-    <script type="module" src="./scripts/pagina10.js"></script>
+    <script type="module" src="./scripts/empresa.js"></script>
 
 </head>
 
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" id="main">
         <div class="row p-3 bg-dark text-white">
             <h5>PERFIL DE EMPRESA:</h5>
         </div>
