--- a/src/Raccoon/home.html
+++ b/src/Raccoon/home.html
@@ -15,10 +15,10 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand mt-2 mt-lg-0" href="/src/Raccoon/home.html">
+        <a class="navbar-brand mt-2 mt-lg-0" href="./home.html">
             <img src="../img/raccoon.svg" height="50" loading="lazy" /> Raccoon Jobs
-
         </a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,16 +26,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ver vagas</a>
+                    <a class="nav-link" href="./vagas_lista.html">Ver vagas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Habilidades</a>
+                    <a class="nav-link" href="./habilidade.html">Habilidades</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cargos</a>
+                    <a class="nav-link" href="./cargo.html">Cargos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sou empresa</a>
+                    <a class="nav-link" href="./login.html">Sou empresa</a>
                 </li>
             </ul>
         </div>
