--- a/src/Raccoon/habilidade.html
+++ b/src/Raccoon/habilidade.html
@@ -44,12 +44,11 @@
     </nav>
 
     <div class="container h-100">
-        <section class="w-100" id=" main-section">
+        <section class="w-100 mt-5" id=" main-section">
             <div>
                 <h4 id="skill">Descrição</h4>
-                <p>Descrição</p>
+                <p><strong>Descrição</strong></p>
                 <p id="skill-descript">Descrição da Habilidade</p>
-
             </div>
             <div class="row justify-content-center my-5">
                 <h4 class="text-center">Apareceu como essencial em N vagas nos últimos 30 dias.</h4>
