Missing links update & custom link to logged user.
Missing links update.
Custom link for logged  users.
Fixed scripts imports missing.

--- a/src/template_padrão.html
+++ b/src/template_padrão.html
@@ -25,18 +25,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto" id="navBar">
                 <li class="nav-item">
                     <a class="nav-link" href="./vagas_lista.html">Ver vagas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./habilidades.html">Habilidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./cargos.html">Cargos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sou empresa</a>
                 </li>
             </ul>
         </div>
