--- a/src/Raccoon/cadastro.html
+++ b/src/Raccoon/cadastro.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./scripts/generateDummyData.js"></script>
+    <script type="module" src="./scripts/utils.js" ></script>
 
     <style>      
 .form-control:focus {
@@ -35,7 +36,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand mt-2 mt-lg-0" href="/src/Raccoon/home.html">
+        <a class="navbar-brand mt-2 mt-lg-0" href="./home.html">
             <img src="../img/raccoon.svg" height="50" loading="lazy" /> Raccoon Jobs
         </a>
 
@@ -44,18 +45,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto" id="navBar">
                 <li class="nav-item">
                     <a class="nav-link" href="./vagas_lista.html">Ver vagas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./habilidades.html">Habilidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./cargos.html">Cargos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./login.html">Sou empresa</a>
                 </li>
             </ul>
         </div>
