--- a/src/Raccoon/empresaUser.html
+++ b/src/Raccoon/empresaUser.html
@@ -27,18 +27,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto" id="navBar">
                 <li class="nav-item">
                     <a class="nav-link" href="./vagas_lista.html">Ver vagas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./habilidades">Habilidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./cargos">Cargos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sou empresa</a>
                 </li>
             </ul>
         </div>
