--- a/src/Raccoon/login.html
+++ b/src/Raccoon/login.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand mt-2 mt-lg-0" href="/src/Raccoon/home.html">
+        <a class="navbar-brand mt-2 mt-lg-0" href="./home.html">
             <img src="../img/raccoon.svg" height="50" loading="lazy" /> Raccoon Jobs
         </a>
 
@@ -25,18 +25,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto" id="navBar">
                 <li class="nav-item">
                     <a class="nav-link" href="./vagas_lista.html">Ver vagas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./habilidades.html">Habilidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./cargos.html">Cargos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sou empresa</a>
                 </li>
             </ul>
         </div>
