--- a/src/Raccoon/vaga.html
+++ b/src/Raccoon/vaga.html
@@ -11,11 +11,12 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./scripts/generateDummyData.js"></script>
+    <script type="module" src="./scripts/utils.js" ></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand mt-2 mt-lg-0" href="/src/Raccoon/home.html">
+        <a class="navbar-brand mt-2 mt-lg-0" href="./home.html">
             <img src="../img/raccoon.svg" height="50" loading="lazy" /> Raccoon Jobs
         </a>
 
@@ -24,18 +25,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto" id="navBar">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ver vagas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Habilidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Cargos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sou empresa</a>
+                    <a class="nav-link" href="./vagas_lista.html">Ver vagas</a>
                 </li>
             </ul>
         </div>
