--- a/src/Raccoon/vagas_lista.html
+++ b/src/Raccoon/vagas_lista.html
@@ -10,6 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./scripts/generateDummyData.js"></script>
+    <script type="module" src="./scripts/utils.js" ></script>
 </head>
 
 <body>
@@ -23,18 +25,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto" id="navBar">
                 <li class="nav-item">
                     <a class="nav-link" href="./vagas_lista.html">Ver vagas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./habilidade.html">Habilidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./cargo.html">Cargos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./login.html">Sou empresa</a>
                 </li>
             </ul>
         </div>
