--- a/src/Raccoon/home.html
+++ b/src/Raccoon/home.html
@@ -11,7 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./scripts/generateDummyData.js"></script>
-    <script type="module" src="./scripts/utils.js" ></script>
+    <script type="module" src="./scripts/utils.js"></script>
+    <script type="module" src="./scripts/home.js"></script>
 </head>
 
 <body>
@@ -38,8 +39,10 @@
                 <div class="col-sm-12 bg-light">
                     <div class="row my-4 justify-content-around">
                         <div class="col-sm-3"></div>
-                        <button type="button" class="btn btn-warning badge-pill btn-md col-sm-2"><strong>Ver Vagas</strong></button>
-                        <button type="button" class="btn btn-warning badge-pill btn-md col-sm-2"><strong>Ver Resumo</strong></button>
+                        <a class="btn btn-warning badge-pill btn-md col-sm-2" href="./vagas_lista.html"><strong>Ver
+                                Vagas</strong></a>
+                        <a class="btn btn-warning badge-pill btn-md col-sm-2" href="./resumo.html"><strong>Ver
+                                Resumo</strong></a>
                         <div class="col-sm-3"></div>
                     </div>
                 </div>
@@ -55,28 +58,28 @@
                         <div class="row bg-light col-sm-12 justify-content-center">
                             <div class="row my-4 col-sm-6 col-md-6 col-lg-3 justify-content-around">
                                 <div class="ratio ratio-1x1 col-sm-4">
-                                    <img src="https://i.ibb.co/Pt3Sbrw/unknown.png" referrerpolicy="no-referrer" width="50" height="50" class="rounded align-items-center" alt="LogoDaEmpresa">
+                                    <img src="https://i.ibb.co/Pt3Sbrw/unknown.png" referrerpolicy="no-referrer"
+                                        width="50" height="50" class="rounded align-items-center" alt="LogoDaEmpresa">
                                 </div>
                                 <h3 class="col-sm-8">Super Tech</h3>
                             </div>
                             <div class="row my-4 col-sm-6 col-md-6 col-lg-3 justify-content-around">
                                 <div class="ratio ratio-1x1 col-sm-4">
-                                    <img src="https://i.imgur.com/UsVCZjU.png" referrerpolicy="no-referrer" width="50" height="50" class="rounded align-items-center" alt="LogoDaEmpresa">
+                                    <img src="https://i.imgur.com/UsVCZjU.png" referrerpolicy="no-referrer" width="50"
+                                        height="50" class="rounded align-items-center" alt="LogoDaEmpresa">
                                 </div>
                                 <h3 class="col-sm-8">Eletrosurf</h3>
                             </div>
                             <div class="row my-4 col-sm-6 col-md-6 col-lg-3 justify-content-around">
                                 <div class="ratio ratio-1x1 col-sm-4">
-                                    <img src="https://i.imgur.com/yUhqDSw.png" referrerpolicy="no-referrer" width="50" height="50" class="rounded align-items-center" alt="LogoDaEmpresa">
+                                    <img src="https://i.imgur.com/yUhqDSw.png" referrerpolicy="no-referrer" width="50"
+                                        height="50" class="rounded align-items-center" alt="LogoDaEmpresa">
                                 </div>
                                 <h3 class="col-sm-8">Progressus</h3>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
             <div class="row my-3 d-flex justify-content-center align-items-start bg-light rounded">
                 <h1 class="mt-3 row my-5"><strong>Depoimentos</strong></h1>
@@ -115,51 +118,6 @@
             <a class="fw-bold" href="#">Trash Panda</a>
         </div>
     </footer>
-    <script>
-        const truncateText = (text, length) =>
-            text.length <= length ? text : text.substr(0, length) + '\u2026';
-        const fullDateString = (date) => { let dt = new Date(date); return `${dt.getDate()}/${dt.getMonth() + 1}/${dt.getFullYear()}`; }
-        const hpgUltimasVagas = document.getElementById("hpg-ultimas-vagas")
-        const vagasTmp = JSON.parse(localStorage.getItem('Vagas'))
-
-        function habsToPill(habs, max, col) {
-            let div = ''
-            for (vl in habs) {
-                if (vl < max) {
-                    if (vl % 2 == 0) {
-                        div += `<p id="skill-${vl}" class="col-sm-${col} rounded-pill bg-warning">${habs[vl].nome} </p>`
-                    } else {
-                        div += `<p id="skill-${vl}" class="col-sm-${col} rounded-pill bg-info">${habs[vl].nome}</p>`
-                    }
-                }
-            }
-            return div
-        }
-
-        for (let i = 1; i <= 4; i++) {
-            let habilidades = JSON.parse(localStorage.getItem('Habilidades')).filter(obj => vagasTmp[vagasTmp.length - i].hab_essencial_id.includes(obj.id))
-            let empresa = JSON.parse(localStorage.getItem('Empresas')).find(objeto => objeto.id === vagasTmp[vagasTmp.length - i].empresa_id)
-            $('#hpg-ultimas-vagas').append(`
-                <div class='row col-sm-12 col-md-12 col-lg-6 align-items-center'>
-                    <div class="ratio ratio-1x1 col-sm-4">
-                        <img src="${empresa.logo_link}" class="img-fluid rounded align-items-center" alt="LogoDaEmpresa">
-                    </div>
-                    <div class="col-sm-8">
-                        <div class="row">
-                            <p id="vaga-nome" class="col-sm-12 text-left text-black"><strong>${vagasTmp[vagasTmp.length - i].vaga_nome}</strong></p>
-                            <p id="empresa-data" class="col-sm-12 text-left">${empresa.nome} - De: ${fullDateString(vagasTmp[vagasTmp.length - i].data_cadastro)
-                } - Até: ${fullDateString(vagasTmp[vagasTmp.length - i].data_cadastro)
-                }</p >
-                            <p id="descricao" class="col-sm-12 text-left">${truncateText(vagasTmp[vagasTmp.length - i].descricao, 100)}</p>
-                            <div class="col-sm-12 row text-center">
-                                ${habsToPill(habilidades, 3, 4)}
-                            </div>
-                        </div >
-                    </div >
-                </div >
-            `)
-        }
-    </script>
 </body>
 
 </html>
