--- a/src/Raccoon/login.html
+++ b/src/Raccoon/login.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./scripts/generateDummyData.js"></script>
+    <script type="module" src="./scripts/utils.js" ></script>
 </head>
 
 <body>
