--- a/src/Raccoon/vagas_lista.html
+++ b/src/Raccoon/vagas_lista.html
@@ -11,7 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./scripts/generateDummyData.js"></script>
-    <script type="module" src="./scripts/utils.js" ></script>
+    <script type="module" src="./scripts/utils.js"></script>
+    <script type="module" src="./scripts/vagas_lista.js"></script>
 </head>
 
 <body>
@@ -36,8 +37,9 @@
         <div class="row justify-content-around my-5">
             <div class="col-sm-4 justify-content-center">
                 <div class="input-group rounded">
-                    <input id="textInput" type="search" class="form-control rounded" placeholder="Pesquisar" aria-label="Search" aria-describedby="search-addon" />
-                    <button class="btn btn-primary btn-sm" id="search-addon" onclick="filterText()">
+                    <input id="textInput" type="search" class="form-control rounded" placeholder="Pesquisar"
+                        aria-label="Search" aria-describedby="search-addon" />
+                    <button class="btn btn-primary btn-sm" id="search-addon" onclick="filterHab()">
                         OK
                     </button>
                 </div>
@@ -47,7 +49,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-10 row" id="lista_vagas">
-
+                
             </div>
             <div class="col-sm-2 text-center">
                 <h3>Filtrar por Categoria</h3>
@@ -56,6 +58,10 @@
                 </div>
                 <button class="btn btn-primary btn-sm mt-3" onclick="clearFilter()">Limpar filtro</button>
             </div>
+            <nav aria-label="list navigation" class="col-sm-10 row justify-content-center">
+                <ul class="pagination" id="paginationList">
+                </ul>
+            </nav>
         </div>
     </div>
     <div class="mb-5"></div>
@@ -65,75 +71,6 @@
             <a class="fw-bold" href="#">Trash Panda</a>
         </div>
     </footer>
-
-    <script>
-        const truncateText = (text, length) => text.length <= length ? text : text.substr(0, length) + '\u2026';
-        const fullDateString = (date) => { let dt = new Date(date); return `${dt.getDate()}/${dt.getMonth() + 1}/${dt.getFullYear()}`; }
-        function filterHab(id) {
-            localStorage.getItem('filterHab') ? localStorage.setItem('filterHab', [id, ...localStorage.getItem('filterHab').split(',')]) : localStorage.setItem('filterHab', [id])
-            definirListaVagas(JSON.parse(localStorage.getItem('Vagas')).filter(obj => obj.hab_essencial_id.some(item => localStorage.getItem('filterHab').split(',').includes(String(item)))))
-        }
-        function filterText() {
-            definirListaVagas(JSON.parse(localStorage.getItem('Vagas')).filter(obj => obj.vaga_nome.toUpperCase().includes($('#textInput').val().toUpperCase())))
-        }
-        const clearFilter = () => {
-            localStorage.setItem('filterHab', []), definirListaVagas(JSON.parse(localStorage.getItem('Vagas')))
-            window.location.reload()
-        }
-        function habsToPill(habs, max, col) {
-            let div = ''
-            for (vl in habs) {
-                if (vl < max) {
-                    if (vl % 2 == 0) {
-                        div += `<p id="skill-${vl}" class="col-sm-${col} rounded-pill bg-warning">${habs[vl].nome} </p>`
-                    } else {
-                        div += `<p id="skill-${vl}" class="col-sm-${col} rounded-pill bg-info">${habs[vl].nome}</p>`
-                    }
-                }
-            }
-            return div
-        }
-
-        let listaVagas = JSON.parse(localStorage.getItem('Vagas'))
-        let listaHabs = JSON.parse(localStorage.getItem('Habilidades'))
-
-        function definirListaVagas(listaVagas) {
-            $('#lista_vagas').html('')
-            for (vl in listaVagas) {
-                let empresa = JSON.parse(localStorage.getItem('Empresas')).find(obj => obj.id === listaVagas[vl].empresa_id)
-                let habilidades = JSON.parse(localStorage.getItem('Habilidades')).filter(obj => listaVagas[vl].hab_essencial_id.includes(obj.id))
-                $('#lista_vagas').append(`
-                    <div class='row col-sm-12 col-md-12 col-lg-6 align-items-center bg-light mt-2'>
-                        <div class="ratio ratio-1x1 col-sm-4">
-                            <img src="${empresa.logo_link}" class="img-fluid rounded align-items-center" alt="LogoDaEmpresa">
-                        </div>
-                        <div class="col-sm-8">
-                            <div class="row ">
-                                <p id="vaga-nome" class="col-sm-12 text-left text-black mt-2"><strong>${listaVagas[vl].vaga_nome ? listaVagas[vl].vaga_nome : JSON.parse(localStorage.getItem('Cargos')).find(obj => obj.id === listaVagas[vl].cargo_id).nome}</strong></p>
-                                <p id="empresa-data" class="col-sm-12 text-left">${empresa.nome} - <small>De: ${fullDateString(listaVagas[vl].data_cadastro)} - Até: ${fullDateString(listaVagas[vl].data_exp)}</small></p>
-                                <p id="descricao" class="col-sm-12 text-left">${truncateText(listaVagas[vl].descricao, 100)}</p>
-                                <div class="col-sm-12 row text-center">
-                                    ${habsToPill(habilidades, 4, 5)}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    `
-                )
-            }
-        }
-        definirListaVagas(listaVagas)
-        for (vl in listaHabs) {
-            $('#filters').append(`
-                <div class="form-check form-switch text-left">
-                    <input class="form-check-input" type="checkbox" onclick="filterHab(${listaHabs[vl].id})" id="hab-${listaHabs[vl].id}">
-                    <label class="form-check-label" for="flexSwitchCheckDefault">${listaHabs[vl].nome}</label>
-                </div>
-            `)
-        }
-
-
-    </script>
 </body>
 
 </html>
