--- a/src/Raccoon/habilidade.html
+++ b/src/Raccoon/habilidade.html
@@ -35,20 +35,21 @@
     </nav>
 
     <div class="container h-100">
-        <section class="w-100 mt-5" id=" main-section">
+        <section class="w-100 mt-2" id=" main-section">
             <div>
-                <h4 id="skill">Descrição</h4>
-                <p><strong>Descrição</strong></p>
-                <p id="skill-descript">Descrição da Habilidade</p>
+                <div class="row p-3 bg-dark text-white">
+                    <h4 id="skill"></h4>
+                </div>
+                <p class="mt-3" id="skill-descript"></p>
             </div>
             <div class="row justify-content-center my-5">
-                <h4 class="text-center">Apareceu como essencial em N vagas nos últimos 30 dias.</h4>
+                <h4 class="text-center" id="essNumber">Apareceu como essencial em N vagas nos últimos 30 dias.</h4>
                 <div id="essential-last-30-days" class="row">
 
                 </div>
             </div>
             <div class="row justify-content-center my-5">
-                <h4 class="text-center">Apareceu como diferencial em N vagas nos últimos 30 dias.</h4>
+                <h4 class="text-center" id="difNumber">Apareceu como diferencial em N vagas nos últimos 30 dias.</h4>
                 <div id="diferencial-last-30-days" class="row">
                 </div>
             </div>
