Adicionar cargo, senioridade e salario as vagas

--- a/src/Raccoon/vaga.html
+++ b/src/Raccoon/vaga.html
@@ -38,7 +38,7 @@
         <!-- NOME DA EMPRESA.-->
         <div class="mt-2">
             <div class="col bg-dark">
-                <div class="p-3">
+                <div class="p-2">
                     <h2 class="font-weight-bold text-white" id="empresaTitulo">Company Solutions contrata:</h2>
                 </div>
             </div>
@@ -49,24 +49,30 @@
                 <div class="col-sm-12">
                     <div class="row">
                         <div class="ratio ratio-1x1 col-sm-3">
-                            <img src="" id="logoEmpresa" class="img-fluid rounded align-items-center" alt="LogoDaEmpresa">
+                            <img src="" id="logoEmpresa" class="img-fluid rounded align-items-center" width="200" alt="LogoDaEmpresa">
                         </div>
                         <div class="col-sm-9">
                             <div class="row">
-                                <h4 class="col-sm-12 p-0" id="cargoTitulo">Desenvolvedor Full Stack</h4>
-                                <div>
-                                    <div class="row">
-                                        <p class="col-sm-12 col-md-6 col-lg-10"><b>Data de Cadastro da vaga:</b></p>
-                                        <p class="col-sm-12 col-md-6 col-lg-2" id="dataCadastro"><b></b> 08/05</p>
+                                <h4 class="col-sm-12 p-0 text-center" id="cargoTitulo">Desenvolvedor Full Stack</h4>
+                                <div class="row col-sm-12 border-top mt-2">
+                                    <div class="col-sm-12 mt-3"></div>
+                                    <div class="row col-sm-12 col-md-6">
+                                        <p class="col-sm-12" id="cargo"></p>
                                     </div>
-                                    <div class="row">
-                                        <p class="col-sm-12 col-md-6 col-lg-10"><b>Prazo de candidatura:</b></p>
-                                        <p class="col-sm-12 col-md-6 col-lg-2" id="candidaturaPrazo"><b></b></p>
+                                    <div class="row col-sm-12 col-md-6">
+                                        <p class="col-sm-12" id="senioridade"></p>
                                     </div>
-                                    <div class="row">
-                                        <p class="col-sm-12 col-md-6 col-lg-10"><b>N de Candidatos:</b></p>
-                                        <p class="col-sm-12 col-md-6 col-lg-2" id="candidaturaN"><b>N de
-                                                Candidatos:</b> 64 </p>
+                                    <div class="row col-sm-12 col-md-6">
+                                        <p class="col-sm-12" id="salario"></p>
+                                    </div>
+                                    <div class="row col-sm-12 col-md-6">
+                                        <p class="col-sm-12" id="dataCadastro"></p>
+                                    </div>
+                                    <div class="row col-sm-12 col-md-6">
+                                        <p class="col-sm-12" id="candidaturaPrazo"><b></b></p>
+                                    </div>
+                                    <div class="row col-sm-12 col-md-6">
+                                        <p class="col-sm-12" id="candidaturaN"><b>N de Candidatos:</b></p>
                                     </div>
                                 </div>
                             </div>
