--- a/src/Raccoon/vaga.html
+++ b/src/Raccoon/vaga.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raccon Jobs</title>
+    <title>Raccoon Jobs</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -121,7 +121,7 @@
                                 <h3 href="#" id="empresaTitulo2" class="col-sm-12 col-md-6 col-lg-12"><b>Company Solutions</h3>
                                 <p>
                                 <a href="#" id="e-mail" class="col-sm-12 col-md-6 col-lg-12"></a>
-                                <p><a href="#" id="linkedin" class="col-sm-12 col-md-6 col-lg-12">Linkedin: in/raccon</a></p>
+                                <p><a href="#" id="linkedin" class="col-sm-12 col-md-6 col-lg-12">Linkedin: in/Raccoon</a></p>
                             </div>
                         </div>
                     </div>
