--- a/src/Raccoon/empresaUser.html
+++ b/src/Raccoon/empresaUser.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no">
     <title>Raccoon Jobs</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -37,9 +38,10 @@
 
     <div class="container" id="main">
         <div class="mt-2 bg-light">
+            <a href="#" id="update"><i class="fa fa-cog fa-3x text-primary mt-5 mr-5" aria-hidden="true" style="float: right;"></i></a>
             <div class="row my-2 ml-1">
                 <div class="col-sm-2">
-                    <img id="empresaLogo" class="img-fluid rounded" height="200" width="200" src="/img/raccoon.svg" referrerpolicy="no-referrer"
+                    <img id="empresaLogo" class="img-fluid rounded" height="200" width="200" src="../img/raccoon.svg" referrerpolicy="no-referrer"
                         loading="lazy" />
                 </div>
                 <div class="col-sm-10">
