Trello: 82, 83, 67 & e um pequeno fix em criar vagas
https://trello.com/c/LVvGJVfI/82-contratou-recentemente-empresahtml-aparentemente-não-está-pegando-vagas-expiradas

https://trello.com/c/9lgtkJnk/67-trocar-alert-para-toast-verificar-em-utilsjs

https://trello.com/c/yvyUIKhf/83-alterar-cadastro-de-nome-para-nome-da-empresa

--- a/src/Raccoon/empresa.html
+++ b/src/Raccoon/empresa.html
@@ -63,13 +63,13 @@
 
         <div class="row p-3 bg-light text-black">
             <h5 class="col-sm-12">VALORES:</h5>
-            <div class="col-sm-12" id="valores" </div>
+            <div class="col-sm-12" id="valores"> </div>
 
             </div>
             <div class="row p-3 bg-light text-black">
                 <p class="col-sm-12">CONTRATOU RECENTEMENTE:</p>
+                <div id="vagasExpiradas" class="row justify-content-around p-3 text-black">
             </div>
-            <div id="vagasRecentes" class="row justify-content-around p-3 text-black">
 
             </div>
 
