--- a/src/Raccoon/cadastro.html
+++ b/src/Raccoon/cadastro.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raccoon Jobs</title>
+    <script type="module" src="./scripts/utils.js" ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="./scripts/cadastro.js" defer></script>
+    <script type="module" src="./scripts/cadastro.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="./scripts/generateDummyData.js"></script>
-    <script type="module" src="./scripts/utils.js" ></script>
 
     <style>      
 .form-control:focus {
@@ -60,7 +62,7 @@
             <h2 class="text-center" >Cadastre-se </h2>
             <div class="form-group">
             
-                <label for="nome" id="labelNome" >Nome</label>
+                <label for="nome" id="labelNome" >Nome da Empresa</label>
                 <input type="text"id="nome" class="form-control"  placeholder="Nome">
               </div>
             <div class="form-group">
