--- a/src/Raccoon/home.html
+++ b/src/Raccoon/home.html
@@ -58,22 +58,28 @@
                         <div class="row bg-light col-sm-12 justify-content-center">
                             <div class="row my-4 col-sm-6 col-md-6 col-lg-3 justify-content-around">
                                 <div class="ratio ratio-1x1 col-sm-4">
+                                    <a href="./empresa.html?id=1">
                                     <img src="https://i.ibb.co/Pt3Sbrw/unknown.png" referrerpolicy="no-referrer"
                                         width="50" height="50" class="rounded align-items-center" alt="LogoDaEmpresa">
+                                    </a>
                                 </div>
                                 <h3 class="col-sm-8">Super Tech</h3>
                             </div>
                             <div class="row my-4 col-sm-6 col-md-6 col-lg-3 justify-content-around">
                                 <div class="ratio ratio-1x1 col-sm-4">
+                                    <a href="./empresa.html?id=2">
                                     <img src="https://i.imgur.com/UsVCZjU.png" referrerpolicy="no-referrer" width="50"
                                         height="50" class="rounded align-items-center" alt="LogoDaEmpresa">
+                                    </a>
                                 </div>
                                 <h3 class="col-sm-8">Eletrosurf</h3>
                             </div>
                             <div class="row my-4 col-sm-6 col-md-6 col-lg-3 justify-content-around">
                                 <div class="ratio ratio-1x1 col-sm-4">
+                                    <a href="./empresa.html?id=3">
                                     <img src="https://i.imgur.com/yUhqDSw.png" referrerpolicy="no-referrer" width="50"
                                         height="50" class="rounded align-items-center" alt="LogoDaEmpresa">
+                                    </a>
                                 </div>
                                 <h3 class="col-sm-8">Progressus</h3>
                             </div>
