--- a/src/Raccoon/habilidade.html
+++ b/src/Raccoon/habilidade.html
@@ -44,13 +44,13 @@
             </div>
             <div class="row justify-content-center my-5">
                 <h4 class="text-center" id="essNumber">Apareceu como essencial em N vagas nos últimos 30 dias.</h4>
-                <div id="essential-last-30-days" class="row">
+                <div id="essential-last-30-days" class="col-sm-12 row">
 
                 </div>
             </div>
             <div class="row justify-content-center my-5">
                 <h4 class="text-center" id="difNumber">Apareceu como diferencial em N vagas nos últimos 30 dias.</h4>
-                <div id="diferencial-last-30-days" class="row">
+                <div id="diferencial-last-30-days" class="col-sm-12 row">
                 </div>
             </div>
             <div class="row justify-content-center mb-5">
