--- a/src/Raccoon/home.html
+++ b/src/Raccoon/home.html
@@ -47,9 +47,9 @@
                     </div>
                 </div>
                 <div class="col-sm-12 bg-light">
-                    <div class="row my-4 justify-content-around">
+                    <div class="row my-4 justify-content-center">
                         <h1 class="col-sm-12 mt-3 text-center"><strong>Ultimas Vagas</strong></h1>
-                        <div class="row bg-light col-sm-12" id="hpg-ultimas-vagas">
+                        <div class="row bg-light col-sm-12 justify-content-center" id="hpg-ultimas-vagas">
                         </div>
                     </div>
 
