--- a/src/Raccoon/resumo.html
+++ b/src/Raccoon/resumo.html
@@ -156,9 +156,20 @@
                         </table>
                     </div>
                 </div>
+                <hr class="col-sm-12">
+                <div class="col-sm-10 row">
+                    <h4 class="col-sm-12">Lista de Habilidades em nossa aplicação</h4>
+                    <div class="col-sm-12 ml-2" id="listaHabilidades">
+                    </div>
+                </div>
+                <hr class="col-sm-12">
+                <div class="col-sm-10 row">
+                    <h4 class="col-sm-12">Lista de Cargos em nossa aplicação</h4>
+                    <div class="col-sm-12 ml-2" id="listaCargos">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 
     <footer class="text-center text-lg-start bg-light text-muted">
