--- a/src/Raccoon/vaga.html
+++ b/src/Raccoon/vaga.html
@@ -132,7 +132,7 @@
                         <h5 class="mt-2 mb-4">CONTATOS DA EMPRESA</h5>
                         <div class="row">
                             <div class="col-sm-6 col-md-6 col-lg-2">
-                                <a class="navbar-brand mt-2 mt-lg-0" href="#">
+                                <a class="navbar-brand mt-2 mt-lg-0" href="#" id="empresaLink">
                                     <img src="" id="logoEmpresa2" height="150" width="150">
                                 </a>
                             </div>
