--- a/src/Raccoon/vagas_lista.html
+++ b/src/Raccoon/vagas_lista.html
@@ -58,7 +58,7 @@
                 </div>
                 <button class="btn btn-primary btn-sm mt-3" onclick="clearFilter()">Limpar filtro</button>
             </div>
-            <nav aria-label="list navigation" class="col-sm-10 row justify-content-center">
+            <nav aria-label="list navigation" class="col-sm-10 row justify-content-center mt-2">
                 <ul class="pagination" id="paginationList">
                 </ul>
             </nav>
