--- a/src/Raccoon/vaga.html
+++ b/src/Raccoon/vaga.html
@@ -13,8 +13,8 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="./scripts/generateDummyData.js"></script>
-    <script type="module" src="./scripts/utils.js" ></script>
-    <script type="module" src="./scripts/vaga.js" ></script>
+    <script type="module" src="./scripts/utils.js"></script>
+    <script type="module" src="./scripts/vaga.js"></script>
 </head>
 
 <body>
@@ -102,12 +102,12 @@
                 <!--HABILIDADES-->
                 <h5 class="mb-3">HABILIDADES</h5>
                 <div id="hab_ess" class="row text-center ml-2 ">
-                    
+
                 </div>
-                <!--HABILIDADES DIFERENCIADAS-->
-                <h5 class="mt-3 mb-3">HABILIDADES DIFERENCIADAS</h5>
+                <!--HABILIDADES DIFERENCIAIS-->
+                <h5 class="mt-3 mb-3">HABILIDADES DIFERENCIAIS</h5>
                 <div id="hab_dif" class="row text-center ml-2 ">
-                    
+
                 </div>
                 <div>
                     <!--COMO SE CANDIDATAR-->
@@ -139,7 +139,7 @@
                             <div class="col-sm-6 col-md-6 col-lg-10">
                                 <h3 href="#" id="empresaTitulo2" class="col-sm-12 col-md-6 col-lg-12"><b>Company Solutions</h3>
                                 <p>
-                                <a href="#" id="e-mail" class="col-sm-12 col-md-6 col-lg-12"></a>
+                                    <a href="#" id="e-mail" class="col-sm-12 col-md-6 col-lg-12"></a>
                                 <p><a href="#" id="linkedin" class="col-sm-12 col-md-6 col-lg-12">Linkedin: in/Raccoon</a></p>
                             </div>
                         </div>
@@ -150,8 +150,8 @@
     </div>
     <footer class="text-center text-lg-start bg-light text-muted">
         <div class="text-center p-4 bg-light">
-        © 2022 Copyright:
-        <a class="fw-bold" href="#">Trash Panda</a>
+            © 2022 Copyright:
+            <a class="fw-bold" href="#">Trash Panda</a>
         </div>
     </footer>
 </body>
