Adiciona uma restrição que impede escolher a data final para a vaga em dias anteriores a criação da vaga

--- a/src/Raccoon/criar_vaga.html
+++ b/src/Raccoon/criar_vaga.html
@@ -11,8 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="./scripts/generateDummyData.js"></script>
@@ -51,35 +50,29 @@
                     <div class="row col-sm-12 mt-3">
                         <div class="col-sm-12 col-md-6 col-lg-3">
                             <label for="habEss" id="labelhabEss">Habilidades essenciais</label>
-                            <select multiple id="habEss" name="habEss" class="required form-control selectpicker"
-                                placeholder="Habilidades essenciais" aria-label="habEss" data-live-search="true">
+                            <select multiple id="habEss" name="habEss" class="required form-control selectpicker" placeholder="Habilidades essenciais" aria-label="habEss" data-live-search="true">
                             </select>
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-3">
                             <label for="habDif" id="labelhabDif">Habilidades diferenciais</label>
-                            <select multiple id="habDif" name="habDif" class="required form-control selectpicker"
-                                placeholder="Habilidades diferenciais" aria-label="habDif" data-live-search="true">
+                            <select multiple id="habDif" name="habDif" class="required form-control selectpicker" placeholder="Habilidades diferenciais" aria-label="habDif" data-live-search="true">
                             </select>
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-3">
                             <label for="senioridade" id="labelsenioridade">Senioridade</label>
-                            <select id="senioridade" name="senioridade"
-                                class="required form-control selectpicker" placeholder="Senioridade"
-                                aria-label="senioridade" data-live-search="true">
+                            <select id="senioridade" name="senioridade" class="required form-control selectpicker" placeholder="Senioridade" aria-label="senioridade" data-live-search="true">
                             </select>
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-3">
                             <label for="cargo" id="labelcargo">Cargo</label>
-                            <select id="cargo" name="cargo" class="required form-control selectpicker"
-                                placeholder="Cargo" aria-label="cargo" data-live-search="true">
+                            <select id="cargo" name="cargo" class="required form-control selectpicker" placeholder="Cargo" aria-label="cargo" data-live-search="true">
                             </select>
                         </div>
                     </div>
                     <div class="row col-sm-12 mt-3 justify-content-center">
                         <div class="col-sm-6 col-md-3">
                             <label for="salario" id="labelSalario">Salario </label>
-                            R$<input type="number" min="0.00" step="100" value="2000" id="salario"
-                                class="form-control" placeholder="Salario em R$">
+                            R$<input type="number" min="0.00" step="100" value="2000" id="salario" class="form-control" placeholder="Salario em R$">
                         </div>
                         <div class="col-sm-6 col-md-3">
                             <label for="nomeCargo" id="labelNomeCargo">Data final da vaga</label>
